--- a/signup.html
+++ b/signup.html
@@ -113,7 +113,7 @@
                     <input type="date" id="birthday" name="birthday" required><br>
                     <label for="email">Enter your email:</label>
                     <input type="email" id="email" name="email" required><br>
-                    <label for="label-equipment">Choose prefered equipment:</label><br>
+                    <p>Choose prefered equipment:</p>
                     <input type="radio" id="gear1" name="gear" value="Barbells" checked="checked">
                     <label for="gear1"> Barbells</label>
                     <input type="radio" id="gear2" name="gear" value="Dumbells">
