--- a/signup.html
+++ b/signup.html
@@ -97,8 +97,7 @@
     <section id="signup-form">
         <div class="container">
             <div class="card">
-                <img src="assets/images/membership.png" alt="membership image"
-                    style="width:100%;height:80%;border-radius: 1%;">
+                <img src="assets/images/membership.png" alt="membership image" class="signup_form_main_image">
                 <h2>Sign up</h2>
                 <p>Sign up today and get personalized training programme
                 </p>
